--- a/SyncSwimming/MainWindow.xaml
+++ b/SyncSwimming/MainWindow.xaml
@@ -5,8 +5,49 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SyncSwimming"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="800">
     <Grid>
-        
-    </Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+
+
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" HorizontalAlignment="Left" Orientation="Horizontal">
+                    <Button Name="ExportButton" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonExport_Click">Экспорт</Button>
+                    <Label Margin="5" Content="Найти: "></Label>
+                    <TextBox Name="SearchTextBox" Margin="5" VerticalContentAlignment="Center" Width="100" TextChanged="SearchTextBox_TextChanged"></TextBox>
+                    <TextBlock Name="FoundNumber" Margin="5" VerticalAlignment="Center"></TextBlock>
+                </StackPanel>
+                <Button Grid.Column="1" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonAdd_Click"></Button>
+                <Button Grid.Column="2" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonDelete_Click"></Button>
+                <Button Grid.Column="3" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonEdit_Click"></Button>
+            </Grid>
+
+
+            <DataGrid Name="dataGrid" AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserSortColumns="False" MouseDoubleClick="dataGrid_MouseDoubleClick">
+                <DataGrid.CommandBindings>
+                    <CommandBinding Command="Delete" Executed="ButtonDelete_Click"/>
+                </DataGrid.CommandBindings>
+                <DataGrid.Columns>
+                    <DataGridTextColumn IsReadOnly="False" Binding="{Binding Path=FIO}" Width="*" MinWidth="100" Header="ФИО"/>
+                    <DataGridTextColumn IsReadOnly="False" Binding="{Binding Path=Year}" Width="*" MinWidth="100" Header="Год рождения"/>
+                    <DataGridTextColumn IsReadOnly="False" Binding="{Binding Path=Category}" Width="*" MinWidth="100" Header="Разряд"/>
+                    <DataGridTextColumn IsReadOnly="False" Binding="{Binding Path=Team}" Width="*" MinWidth="100" Header="Команда"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+</Grid>
 </Window>
