--- a/SyncSwimming/MainWindow.xaml
+++ b/SyncSwimming/MainWindow.xaml
@@ -17,8 +17,37 @@
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Name="OP8" Click="ChangeList_Click">ОП 8 и м</Button>
+                <Button Grid.Column="1" Name="OP12" Click="ChangeList_Click">ОП 12 и м</Button>
+                <Button Grid.Column="2" Name="OP13_15" Click="ChangeList_Click">ОП 13-15</Button>
+                <Button Grid.Column="3" Name="Solo8" Click="ChangeList_Click">Соло 8 и м</Button>
+                <Button Grid.Column="4" Name="Solo12" Click="ChangeList_Click">Соло 12 и м</Button>
+                <Button Grid.Column="5" Name="Solo13_15" Click="ChangeList_Click">Соло 13-15</Button>
+                <Button Grid.Column="6" Name="Duo8" Click="ChangeList_Click">Дуэт 8 и м</Button>
+                <Button Grid.Column="7" Name="Duo12" Click="ChangeList_Click">Дуэт 12 и м</Button>
+                <Button Grid.Column="8" Name="Duo13_15" Click="ChangeList_Click">Дуэт 13-15</Button>
+                <Button Grid.Column="9" Name="Group" Click="ChangeList_Click">Группа</Button>
+                <Button Grid.Column="10" Name="Combi" Click="ChangeList_Click">Комби</Button>
+                <Button Grid.Column="11" Name="Trophy" Click="ChangeList_Click">Трофи</Button>
+            </Grid>
+            <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -37,15 +66,15 @@
             </Grid>
 
 
-            <DataGrid Name="dataGrid" AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserSortColumns="False" MouseDoubleClick="dataGrid_MouseDoubleClick">
+            <DataGrid Margin="5" Name="dataGrid" AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserSortColumns="False" MouseDoubleClick="dataGrid_MouseDoubleClick">
                 <DataGrid.CommandBindings>
                     <CommandBinding Command="Delete" Executed="ButtonDelete_Click"/>
                 </DataGrid.CommandBindings>
                 <DataGrid.Columns>
-                    <DataGridTextColumn IsReadOnly="False" Binding="{Binding Path=FIO}" Width="*" MinWidth="100" Header="ФИО"/>
-                    <DataGridTextColumn IsReadOnly="False" Binding="{Binding Path=Year}" Width="*" MinWidth="100" Header="Год рождения"/>
-                    <DataGridTextColumn IsReadOnly="False" Binding="{Binding Path=Category}" Width="*" MinWidth="100" Header="Разряд"/>
-                    <DataGridTextColumn IsReadOnly="False" Binding="{Binding Path=Team}" Width="*" MinWidth="100" Header="Команда"/>
+                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=FIO}" Width="*" MinWidth="100" Header="ФИО"/>
+                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Year}" Width="*" MinWidth="100" Header="Год рождения"/>
+                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Category}" Width="*" MinWidth="100" Header="Разряд"/>
+                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Team}" Width="*" MinWidth="100" Header="Команда"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
