--- a/SyncSwimming/ParticipantWindow.xaml
+++ b/SyncSwimming/ParticipantWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SyncSwimming.NewParticipantWindow"
+﻿<Window x:Class="SyncSwimming.ParticipantWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
