--- a/SyncSwimming/MainWindow.xaml
+++ b/SyncSwimming/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SyncSwimming"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="800">
+        Title="MainWindow" Height="350" Width="800" Closed="Window_Closed" Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -56,9 +56,11 @@
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0" HorizontalAlignment="Left" Orientation="Horizontal">
                     <Button Name="ExportButton" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonExport_Click">Экспорт</Button>
+                    <Button Name="ExportAllButton" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonExportAll_Click">Экспортировать все</Button>
                     <Label Margin="5" Content="Найти: "></Label>
-                    <TextBox Name="SearchTextBox" Margin="5" VerticalContentAlignment="Center" Width="100" TextChanged="SearchTextBox_TextChanged"></TextBox>
+                    <TextBox Name="SearchTextBox" Margin="5" VerticalContentAlignment="Center" Width="85" TextChanged="SearchTextBox_TextChanged"></TextBox>
                     <TextBlock Name="FoundNumber" Margin="5" VerticalAlignment="Center"></TextBlock>
+                    <ProgressBar Name="prBar" Width="50" IsIndeterminate="True" Visibility="Hidden" Margin="5"></ProgressBar>
                 </StackPanel>
                 <Button Grid.Column="1" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonAdd_Click"></Button>
                 <Button Grid.Column="2" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonDelete_Click"></Button>
