--- a/SyncSwimming/MainWindow.xaml
+++ b/SyncSwimming/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SyncSwimming"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="800" Closed="Window_Closed" Closing="Window_Closing">
+        Title="MainWindow" Height="350" Width="1000" Closed="Window_Closed" Closing="Window_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -57,27 +57,30 @@
                 <StackPanel Grid.Column="0" HorizontalAlignment="Left" Orientation="Horizontal">
                     <Button Name="ExportButton" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonExport_Click">Экспорт</Button>
                     <Button Name="ExportAllButton" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonExportAll_Click">Экспорт всего</Button>
+                    <Button Name="ExportWordButton" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100" Margin="5" Click="ButtonExportWord_Click">Экспорт в Word</Button>
                     <Label Margin="5" Content="Найти: "></Label>
                     <TextBox Name="SearchTextBox" Margin="5" VerticalContentAlignment="Center" Width="85" TextChanged="SearchTextBox_TextChanged"></TextBox>
                     <TextBlock Name="FoundNumber" Margin="5" VerticalAlignment="Center"></TextBlock>
                     <Button Name="ButtonSort" Margin="5" VerticalAlignment="Center" Click="ButtonSort_Click">Сортировать по итогу</Button>
-                    <ProgressBar Name="prBar" Width="50" IsIndeterminate="True" Visibility="Hidden" Margin="5"></ProgressBar>
+                    <Button Name="ButtonCoef" Visibility="Visible" Margin="5" VerticalAlignment="Center" Click="ButtonCoef_Click">Коэф.</Button>
+                    <ProgressBar Name="prBar" Width="55" IsIndeterminate="True" Visibility="Hidden" Margin="5"></ProgressBar>
                 </StackPanel>
-                <Button Grid.Column="1" Name="AddButton" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="50" Margin="5" Click="ButtonAdd_Click"></Button>
-                <Button Grid.Column="2" Name="DeleteButton" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="50" Margin="5" Click="ButtonDelete_Click"></Button>
-                <Button Grid.Column="3" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="50" Margin="5" Click="ButtonEdit_Click" Name="EditButton"></Button>
+                <Button Grid.Column="1" Name="AddButton" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="50" Width="75" Margin="5" Click="ButtonAdd_Click"></Button>
+                <Button Grid.Column="2" Name="DeleteButton" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="50" Width="75" Margin="5" Click="ButtonDelete_Click"></Button>
+                <Button Grid.Column="3" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="50" Margin="5" Width="75" Click="ButtonEdit_Click" Name="EditButton"></Button>
             </Grid>
 
 
-            <DataGrid Margin="5" Name="dataGrid" AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserSortColumns="False" MouseDoubleClick="dataGrid_MouseDoubleClick">
+            <DataGrid Margin="5" Name="dataGrid" AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserSortColumns="True" MouseDoubleClick="dataGrid_MouseDoubleClick">
                 <DataGrid.CommandBindings>
                     <CommandBinding Command="Delete" Executed="ButtonDelete_Click"/>
                 </DataGrid.CommandBindings>
-                <DataGrid.Columns>
-                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=FIO}" Width="*" MinWidth="100" Header="ФИО"/>
-                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Year}" Width="*" MinWidth="100" Header="Год рождения"/>
-                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Category}" Width="*" MinWidth="100" Header="Разряд"/>
-                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Path=Team}" Width="*" MinWidth="100" Header="Команда"/>
+                <DataGrid.Columns> 
+                    <DataGridTextColumn CanUserSort="True" Visibility="Visible" IsReadOnly="False" Binding="{Binding Path=Position}" Width="Auto" Header="Номер"/>
+                    <DataGridTextColumn CanUserSort="False" IsReadOnly="True" Binding="{Binding Path=FIO}" Width="*" MinWidth="100" Header="ФИО"/>
+                    <DataGridTextColumn CanUserSort="False" IsReadOnly="True" Binding="{Binding Path=Year}" Width="*" MinWidth="100" Header="Год рождения"/>
+                    <DataGridTextColumn CanUserSort="False" IsReadOnly="True" Binding="{Binding Path=Category}" Width="*" MinWidth="100" Header="Разряд"/>
+                    <DataGridTextColumn CanUserSort="False" IsReadOnly="True" Binding="{Binding Path=Team}" Width="*" MinWidth="100" Header="Команда"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
