--- a/SyncSwimming/ScoresCombiWindow.xaml
+++ b/SyncSwimming/ScoresCombiWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SyncSwimming.ScoresTrophyWindow"
+﻿<Window x:Class="SyncSwimming.ScoresCombiWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SyncSwimming"
         mc:Ignorable="d"
-        Title="ScoresTrophyWindow" Width="700" MinHeight="165" MaxHeight="500" Height="167.282">
+        Title="ScoresCombiWindow" Height="179.687" Width="700">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -13,34 +13,34 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <StackPanel Height="Auto" Name="stackTrophy"></StackPanel>
+        <StackPanel Height="Auto" Name="stackCombi"></StackPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <DataGrid Height="45" CanUserDeleteRows="False" ScrollViewer.CanContentScroll="False" Margin="5" Name="scoresGrid" AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserSortColumns="False" Grid.Column="0">
+            <DataGrid ScrollViewer.CanContentScroll="False" CanUserDeleteRows="False" Margin="5" Name="scoresGrid" AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" CanUserSortColumns="False" Grid.Column="0">
                 <DataGrid.Columns>
                     <DataGridTextColumn Width="*" IsReadOnly="True" Header="Оценка" Binding="{Binding Path=Name}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 1" Binding="{Binding Path=RefferiesT[0]}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 2" Binding="{Binding Path=RefferiesT[1]}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 3" Binding="{Binding Path=RefferiesT[2]}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 4" Binding="{Binding Path=RefferiesT[3]}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 5" Binding="{Binding Path=RefferiesT[4]}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 6" Binding="{Binding Path=RefferiesT[5]}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 7" Binding="{Binding Path=RefferiesT[6]}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 8" Binding="{Binding Path=RefferiesT[7]}"></DataGridTextColumn>
-                    <DataGridTextColumn Width="*" Header="Судья 9" Binding="{Binding Path=RefferiesT[8]}"></DataGridTextColumn>
+                    <DataGridTextColumn Width="*" Header="Судья 1" Binding="{Binding Path=RefferiesPP[0]}"></DataGridTextColumn>
+                    <DataGridTextColumn Width="*" Header="Судья 2" Binding="{Binding Path=RefferiesPP[1]}"></DataGridTextColumn>
+                    <DataGridTextColumn Width="*" Header="Судья 3" Binding="{Binding Path=RefferiesPP[2]}"></DataGridTextColumn>
+                    <DataGridTextColumn Width="*" Header="Судья 4" Binding="{Binding Path=RefferiesPP[3]}"></DataGridTextColumn>
+                    <DataGridTextColumn Width="*" Header="Судья 5" Binding="{Binding Path=RefferiesPP[4]}"></DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
             <Grid Margin="0 5 5 5" Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" HorizontalAlignment="Left" TextAlignment="Center" VerticalAlignment="Bottom" Margin="5 0 7 2">Результат</TextBlock>
                 <TextBlock Grid.Row="1" Name="A_T" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Bottom" Margin="5 0 5 2"></TextBlock>
+                <TextBlock Grid.Row="2" Name="I_T" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Bottom" Margin="5 0 5 2"></TextBlock>
+                <TextBlock Grid.Row="3" Name="T_T" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Bottom" Margin="5 0 5 2"></TextBlock>
             </Grid>
 
         </Grid>
@@ -52,8 +52,8 @@
             </Grid.ColumnDefinitions>
             <TextBlock Name="OverAllText" VerticalAlignment="Center" Grid.Column="0" FontSize="17" FontWeight="Black" Margin="10 0 0 0">Итог:</TextBlock>
             <Button Name="Reset" Grid.Column="1" HorizontalAlignment="Right" Width="75" Margin="5" Click="ButtonReset_Click">Сброс</Button>
-            <Button Name="b1" Grid.Column="2" Width="150" Margin="5" HorizontalAlignment="Right" Height="25" Click="ButtonCount_Click">Вычислить итог</Button>
+            <Button Name="b1" Grid.Column="2" Width="150" Margin="5" HorizontalAlignment="Right" Click="ButtonCount_Click">Вычислить итог</Button>
         </Grid>
-        <Button Name="b2" Height="25" Grid.Row="3" Width="150" Margin="5 7 5 7" HorizontalAlignment="Right" Click="ButtonClose_Click">Закрыть</Button>
+        <Button Name="b2" Grid.Row="3" Width="150" Margin="5 7 5 7" HorizontalAlignment="Right" Click="ButtonClose_Click">Закрыть</Button>
     </Grid>
 </Window>
