--- a/SyncSwimming/ScoresGroupWindow.xaml
+++ b/SyncSwimming/ScoresGroupWindow.xaml
@@ -162,10 +162,12 @@
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBlock Name="OverAllText" VerticalAlignment="Center" Grid.Column="0" FontSize="17" FontWeight="Black" Margin="10 0 0 0">Итог:</TextBlock>
-            <Button Grid.Column="1" Width="150" Margin="5" HorizontalAlignment="Right" Click="ButtonCount_Click">Вычислить итог</Button>
+            <Button Name="Reset" Grid.Column="1" HorizontalAlignment="Right" Width="75" Margin="5" Click="ButtonReset_Click">Сброс</Button>
+            <Button Grid.Column="2" Width="150" Margin="5" HorizontalAlignment="Right" Click="ButtonCount_Click">Вычислить итог</Button>
         </Grid>
         <Button Grid.Row="3" Width="150" Margin="5 7 5 7" HorizontalAlignment="Right" Click="ButtonClose_Click">Закрыть</Button>
     </Grid>
