--- a/SyncSwimming/ScoresOPWindow.xaml
+++ b/SyncSwimming/ScoresOPWindow.xaml
@@ -65,10 +65,12 @@
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <TextBlock Name="OverAllText" VerticalAlignment="Center" Grid.Column="0" FontSize="17" FontWeight="Black" Margin="10 0 0 0">Итог:</TextBlock>
-            <Button Grid.Column="1" Width="150" Margin="5" HorizontalAlignment="Right" Click="ButtonCount_Click">Вычислить итог</Button>
+            <Button Name="Reset" Grid.Column="1" HorizontalAlignment="Right" Width="75" Margin="5" Click="ButtonReset_Click">Сброс</Button>
+            <Button Grid.Column="2" Width="150" Margin="5" HorizontalAlignment="Right" Click="ButtonCount_Click">Вычислить итог</Button>
         </Grid>
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
@@ -78,13 +80,13 @@
 
             <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center">
                 <TextBlock VerticalAlignment="Center" Margin="5 5 0 5">Ф1 =</TextBlock>
-                <TextBox Name="F1" Width="50" Margin="5 10 10 10">1,6</TextBox>
+                <TextBox Name="F1" Width="50" Margin="5 10 10 10" IsEnabled="False">1,6</TextBox>
                 <TextBlock VerticalAlignment="Center" Margin="5 5 0 5">Ф2 =</TextBlock>
-                <TextBox Name="F2" Width="50" Margin="5 10 10 10">1,4</TextBox>
+                <TextBox Name="F2" Width="50" Margin="5 10 10 10" IsEnabled="False">1,4</TextBox>
                 <TextBlock VerticalAlignment="Center" Margin="5 5 0 5">Ф3 =</TextBlock>
-                <TextBox Name="F3" Width="50" Margin="5 10 10 10">2,0</TextBox>
+                <TextBox Name="F3" Width="50" Margin="5 10 10 10" IsEnabled="False">2,0</TextBox>
                 <TextBlock VerticalAlignment="Center" Margin="5 5 0 5">Ф4 =</TextBlock>
-                <TextBox Name="F4" Width="50" Margin="5 10 10 10">1,7</TextBox>
+                <TextBox Name="F4" Width="50" Margin="5 10 10 10" IsEnabled="False">1,7</TextBox>
             </StackPanel>
             <Button Grid.Column="1" Width="150" Margin="5 7 5 7" Click="ButtonClose_Click">Закрыть</Button>
         </Grid>
